fix(app): Astro Audit Bug Fixes (button fixes, GSB icon alignment, link pattern component abstraction, toast addition) (#50)

--- a/src/Components/Alerts/Alerts.css
+++ b/src/Components/Alerts/Alerts.css
@@ -134,6 +134,10 @@ li {
   align-self: flex-start;
 }
 
+rux-button.alerts_clear-filter::part(container) {
+  padding-inline: var(--spacing-2);
+}
+
 /* ALERTS FOOTER STYLES */
 
 .alerts::part(footer) {
